--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Syntactual/barterAppApi#readme",
   "dependencies": {
+    "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
