--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "guid": "0.0.12"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
