--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
+    "cognito-express": "^2.0.7",
     "express": "^4.16.2",
     "guid": "0.0.12"
   },
